:new: #2658 【开放平台】第三方平台小程序用户隐私保护指引模块增加申请隐私相关接口